Added image to photo.html

--- a/photo.html
+++ b/photo.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Enjoy...</h1>
+    <img src="/images/croissant.png" alt="Photo of a croissant"/>
 <a href="/"> Homepage</a>
 </body>
 </html>
