Added titles, amended H1 and added meta to improve SEO

--- a/index.html
+++ b/index.html
@@ -2,15 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Top tips for croissant lovers in Bristol. Enjoy recipes, bakery reccomendations and pictures of delicious croissants.">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homepage</title>
-    <link rel="stylesheet" href="/styles/styles.css"/>
+    <title> Croissant recipes and the best bakeries in Bristol - AngharadCaswell</title>
+<link rel="stylesheet" href="/styles/styles.css" />
 </head>
 <body>
     <h1>
-         🥐 Welcome to the World of Croissants 🥐
+         Find out where to buy the best pastries in Bristol and our favourite recipes. 
     </h1>
+
+<h2>🥐 Welcome to the World of Croissants 🥐</h2>
 
     <h3>
         Take a bake from your busy day and learn the doughs and dont's in order to make the perfect crossiant. 
@@ -21,8 +24,8 @@
 
     <footer>
         <a href="/" title="Home"> Homepage</a>
-        <a href="/photo.html" title="Croissant photo"> Photo</a>
-        <a href="/contact.html" title="Contact Croissant.com"> Contact</a>
+        <a href="/photo.html" title="Croissant photos"> Croissant photo</a>
+        <a href="/contact.html" title="Contact us"> Contact us</a>
     </footer>
   
 </body>
