--- a/contact.html
+++ b/contact.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Me</title>
+    <title>Contact us </title>
     <link rel="stylesheet" href="/styles/styles.css" />
 </head>
 <body>
-<h1> Contact us</h1>
+<h1> Contact Us</h1>
 <p>Why not follow us on Instagram?</p>
     <a href="/"> Homepage</a>
 </body>
