--- a/photo.html
+++ b/photo.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Photo page</title>
+    <title>Photogrpahs of Croissants</title>
     <link rel="stylesheet" href="/styles/styles.css" />
 </head>
 <body>
-    <h1>Enjoy...</h1>
+    <h1>Enjoy these photos of croissants....</h1>
     <img src="/images/croissant.png" alt="Photo of a croissant"/>
 <a href="/"> Homepage</a>
 </body>
