Updated title and meta description after Seobility check online

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Top tips for croissant lovers in Bristol. Enjoy recipes, bakery reccomendations and pictures of delicious croissants.">
+    <meta name="description" content="Top tips for croissant lovers in Bristol. Enjoy recipes, bakery recommendations and photos of delicious croissants.">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Croissant recipes and the best bakeries in Bristol - AngharadCaswell</title>
+    <title> Croissant recipes and the best bakeries in Bristol </title>
 <link rel="stylesheet" href="/styles/styles.css" />
 </head>
 <body>
