Added paragraphs and more content on index.html. Included words from page title and H1 in page content to improve SEO.

--- a/index.html
+++ b/index.html
@@ -22,6 +22,23 @@
         Do you knead to know the best place in town for a pastry? We can help!
     </h3>
 
+    <h3>Our Favourite recipes:</h3>
+    <p> We hope you will enjoy making these tasty recipes</p>
+    <ul>
+        <li><a href="https://sallysbakingaddiction.com/homemade-croissants/">Recipe one - Croissant</a> </li>
+        <li> <a href="https://sallysbakingaddiction.com/homemade-chocolate-croissants/"> Recipe two - pan au Chocolat</a></li>
+        <li> <a href="https://www.thespruceeats.com/the-ultimate-pain-au-raisin-recipe-1374870">Recipe three - Pan au raison</a></li>
+    </ul>
+
+    <h3>Best pastries in Bristol:</h3>
+    <p>We know there are plenty of top bakeries in Bristol to choose from, so we hope this help you to choose.</p>
+    <ul>
+        <li><a href="https://thebristolloaf.co.uk/">Bakery one</a> </li>
+        <li> <a href="https://eastbristolbakery.co.uk/"> Bakery two</a>
+        </li>
+        <li> <a href="https://pinkmans.co.uk/">Bakery three</a></li>
+    </ul>
+
     <footer>
         <a href="/" title="Home"> Homepage</a>
         <a href="/photo.html" title="Croissant photos"> Croissant photo</a>
