Updated H1 to include more of the page content for SEO

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h1>
-         Find out where to buy the best pastries in Bristol and our favourite recipes. 
+         Best pastries and bakery in Bristol and our favourite croissant recipes. 
     </h1>
 
 <h2>🥐 Welcome to the World of Croissants 🥐</h2>
